# lcx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  lang.rs  main.rs  render.rs  solution.rs
src/client/: graphql.rs  judge.rs  mod.rs  models.rs
src/commands/: auth.rs  cache_cmd.rs  config_cmd.rs  daily.rs  judge.rs  list.rs  mod.rs  pick.rs  show.rs
src/tui/: home.rs  login.rs  markup.rs  mod.rs  solve.rs
