[package]
name = "lcx"
version = "0.1.0"
edition = "2021"
description = "A Rust command-line client for LeetCode"
license = "MIT"

[[bin]]
name = "lcx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
directories = "5"
comfy-table = "7"
owo-colors = "4"
anyhow = "1"
thiserror = "1"
html2text = "0.12"
ratatui = "0.29"
crossterm = "0.28"
open = "5.4.0"
rookie = "0.5.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
